<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">my_teacher_app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_view_title_login">LOGIN</string>
    <string name="text_view_login">Login: </string>
    <string name="text_view_password">Password: </string>
    <string name="text_view_confirm_password">Confirm Password: </string>
    <string name="button_new_login">New Login</string>
    <string name="button_access_login">Enter</string>
    <string name="text_forgot_password">I forgot my password!</string>
    <string name="title_activity_new_login">NewLoginActivity</string>
    <string name="title_activity_register">REGISTER</string>
    <string name="text_view_name">Name: </string>
    <string name="text_view_email">E-mail: </string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Ok</string>
    <string name="title_activity_confirm_code_access">ConfirmCodeAccessActivity</string>
    <string name="text_view_title_confirm_code">Confirm the Access Code</string>
    <string name="text_view_code">Code: </string>
    <string name="button_new_code">New code</string>
    <string name="button_confirm_code">Confirm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_view_welcome">Welcome</string>
    <string name="button_to_do_call">Do call</string>
    <string name="button_to_register">To register</string>
    <string name="button_search_absence">Search absence</string>
    <string name="title_activity_school_register">School Register</string>
    <string name="button_add_other_school">Add Other School</string>
    <string name="button_add_team">Add Team</string>
    <string name="title_activity_team_register">Team Register</string>
    <string name="text_view_serie">Serie: </string>
	<string name="text_view_first_day">First Day: </string>
	<string name="text_view_last_day">Last Day: </string>
 	<string name="button_add_other_team">Add Other Team</string>
 	<string name="button_add_class">Add Class</string>
</resources>
